@@ -20,14 +20,7 @@ package org.apache.solr.metrics;
 import com.codahale.metrics.Counter;
 import com.codahale.metrics.Metric;
 import com.codahale.metrics.MetricRegistry;
-
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Random;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicLong;
-
+import com.google.common.util.concurrent.AtomicDouble;
 import io.opentelemetry.api.metrics.DoubleCounter;
 import io.opentelemetry.api.metrics.DoubleGauge;
 import io.opentelemetry.api.metrics.DoubleHistogram;
@@ -37,12 +30,17 @@ import io.opentelemetry.api.metrics.LongGauge;
 import io.opentelemetry.api.metrics.LongHistogram;
 import io.opentelemetry.api.metrics.LongUpDownCounter;
 import io.opentelemetry.exporter.prometheus.PrometheusMetricReader;
-import io.opentelemetry.sdk.metrics.data.MetricData;
 import io.prometheus.metrics.model.snapshots.CounterSnapshot;
 import io.prometheus.metrics.model.snapshots.GaugeSnapshot;
 import io.prometheus.metrics.model.snapshots.HistogramSnapshot;
-import io.prometheus.metrics.model.snapshots.MetricSnapshot;
 import io.prometheus.metrics.model.snapshots.MetricSnapshots;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Random;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.DoubleAdder;
+import java.util.concurrent.atomic.LongAdder;
 import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.util.NamedList;
@@ -53,7 +51,8 @@ import org.apache.solr.metrics.reporters.MockMetricReporter;
 import org.junit.Test;
 
 public class SolrMetricManagerTest extends SolrTestCaseJ4 {
-  String PROVIDER = "solr";
+  final String METER_PROVIDER_NAME = "test_provider_name";
+
   // NOCOMMIT: We might not be supported core swapping in 10. Maybe remove this test
   @Test
   public void testSwapRegistries() {
@@ -295,266 +294,393 @@ public class SolrMetricManagerTest extends SolrTestCaseJ4 {
     return new PluginInfo("SolrMetricReporter", attrs, initArgs, null);
   }
 
-
   @Test
   public void testLongCounter() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    LongCounter counter = metricManager.longCounter(PROVIDER, "my_counter", "desc", null);
+    LongCounter counter =
+        metricManager.longCounter(METER_PROVIDER_NAME, "my_counter", "desc", null);
     counter.add(5);
     counter.add(3);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
-    CounterSnapshot data = metrics.stream()
+    CounterSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("my_counter"))
             .map(CounterSnapshot.class::cast)
             .findFirst()
-            .orElseThrow(() -> new AssertionError("LongCounter metric not found"));
-    assertEquals(8, data.getDataPoints().getFirst().getValue(), 0.0);
+            .orElseThrow(() -> new AssertionError("Long counter metric not found"));
+    assertEquals(8, actual.getDataPoints().getFirst().getValue(), 0.0);
   }
 
   @Test
   public void testLongUpDownCounter() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    LongUpDownCounter c = metricManager.longUpDownCounter(PROVIDER, "long_updown_counter", "desc", null);
+    LongUpDownCounter c =
+        metricManager.longUpDownCounter(METER_PROVIDER_NAME, "long_updown_counter", "desc", null);
     c.add(10);
     c.add(-4);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
 
-    GaugeSnapshot data = metrics.stream()
+    GaugeSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("long_updown_counter"))
             .map(GaugeSnapshot.class::cast)
             .findFirst()
-            .orElseThrow(() -> new AssertionError("LongUpDownCounter metric not found"));
-    assertEquals(6, data.getDataPoints().getFirst().getValue(), 0.0);
+            .orElseThrow(() -> new AssertionError("Long up down counter metric not found"));
+    assertEquals(6, actual.getDataPoints().getFirst().getValue(), 0.0);
   }
 
   @Test
   public void testDoubleUpDownCounter() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    DoubleUpDownCounter c = metricManager.doubleUpDownCounter(PROVIDER, "double_updown_counter", "desc", null);
-    c.add(5.5);
-    c.add(-2.2);
+    DoubleUpDownCounter counter =
+        metricManager.doubleUpDownCounter(
+            METER_PROVIDER_NAME, "double_updown_counter", "desc", null);
+    counter.add(10.0);
+    counter.add(-5.5);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
 
-    GaugeSnapshot data = metrics.stream()
+    GaugeSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("double_updown_counter"))
             .map(GaugeSnapshot.class::cast)
             .findFirst()
-            .orElseThrow();
-    assertEquals(3.3, data.getDataPoints().getFirst().getValue(), 0.0);
+            .orElseThrow(() -> new AssertionError("Double up down counter metric not found"));
+    assertEquals(4.5, actual.getDataPoints().getFirst().getValue(), 0.0);
   }
 
   @Test
   public void testDoubleCounter() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    DoubleCounter c = metricManager.doubleCounter(PROVIDER, "double_counter", "desc", null);
-    c.add(2.2);
-    c.add(3.3);
+    DoubleCounter counter =
+        metricManager.doubleCounter(METER_PROVIDER_NAME, "double_counter", "desc", null);
+    counter.add(10.0);
+    counter.add(5.5);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
 
-    CounterSnapshot data = metrics.stream()
+    CounterSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("double_counter"))
             .map(CounterSnapshot.class::cast)
             .findFirst()
-            .orElseThrow();
-    assertEquals(5.5, data.getDataPoints().getFirst().getValue(), 0.0);
+            .orElseThrow(() -> new AssertionError("Double counter metric not found"));
+    assertEquals(15.5, actual.getDataPoints().getFirst().getValue(), 0.0);
   }
 
   @Test
   public void testDoubleHistogram() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    DoubleHistogram h = metricManager.doubleHistogram(PROVIDER, "double_histogram", "desc", null);
-    h.record(1.1);
-    h.record(2.2);
-    h.record(3.3);
+    DoubleHistogram histogram =
+        metricManager.doubleHistogram(METER_PROVIDER_NAME, "double_histogram", "desc", null);
+    histogram.record(1.1);
+    histogram.record(2.2);
+    histogram.record(3.3);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
 
-    HistogramSnapshot hs = metrics.stream()
+    HistogramSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("double_histogram"))
             .map(HistogramSnapshot.class::cast)
             .findFirst()
-            .orElseThrow();
-    var dp = hs.getDataPoints().get(0);
-    assertEquals(3, dp.getCount());
-    assertEquals(6.6, dp.getSum(), 0.0);
+            .orElseThrow(() -> new AssertionError("Double histogram metric not found"));
+
+    assertEquals(3, actual.getDataPoints().getFirst().getCount());
+    assertEquals(6.6, actual.getDataPoints().getFirst().getSum(), 0.0);
   }
 
   @Test
   public void testLongHistogram() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    LongHistogram h = metricManager.longHistogram(PROVIDER, "long_histogram", "desc", null);
-    h.record(1);
-    h.record(2);
-    h.record(3);
+    LongHistogram histogram =
+        metricManager.longHistogram(METER_PROVIDER_NAME, "long_histogram", "desc", null);
+    histogram.record(1);
+    histogram.record(2);
+    histogram.record(3);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
 
-    HistogramSnapshot hs = metrics.stream()
+    HistogramSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("long_histogram"))
             .map(HistogramSnapshot.class::cast)
             .findFirst()
-            .orElseThrow();
-    var dp = hs.getDataPoints().getFirst();
-    assertEquals(3, dp.getCount());
-    assertEquals(6.0, dp.getSum(), 0.0);
+            .orElseThrow(() -> new AssertionError("Long histogram metric not found"));
+
+    assertEquals(3, actual.getDataPoints().getFirst().getCount());
+    assertEquals(6.0, actual.getDataPoints().getFirst().getSum(), 0.0);
   }
 
   @Test
   public void testDoubleGauge() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    DoubleGauge g = metricManager.doubleGauge(PROVIDER, "double_gauge", "desc", null);
-    g.set(4.4);
-    g.set(5.5);
+    DoubleGauge gauge =
+        metricManager.doubleGauge(METER_PROVIDER_NAME, "double_gauge", "desc", null);
+    gauge.set(10.0);
+    gauge.set(5.5);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
 
-    GaugeSnapshot gs = metrics.stream()
+    GaugeSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("double_gauge"))
             .map(GaugeSnapshot.class::cast)
             .findFirst()
-            .orElseThrow();
-    assertEquals(5.5, gs.getDataPoints().getFirst().getValue(), 0.0);
+            .orElseThrow(() -> new AssertionError("Double gauge metric not found"));
+    assertEquals(5.5, actual.getDataPoints().getFirst().getValue(), 0.0);
   }
 
   @Test
   public void testLongGauge() {
     SolrMetricManager metricManager = new SolrMetricManager();
-    LongGauge g = metricManager.longGauge(PROVIDER, "long_gauge", "desc", null);
-    g.set(7);
-    g.set(8);
+    LongGauge gauge = metricManager.longGauge(METER_PROVIDER_NAME, "long_gauge", "desc", null);
+    gauge.set(10);
+    gauge.set(5);
 
-    PrometheusMetricReader reader = metricManager.getPrometheusMetricReaders().get(SolrMetricManager.enforcePrefix(PROVIDER));
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
     MetricSnapshots metrics = reader.collect();
 
-    GaugeSnapshot gs = metrics.stream()
+    GaugeSnapshot actual =
+        metrics.stream()
             .filter(m -> m.getMetadata().getPrometheusName().equals("long_gauge"))
             .map(GaugeSnapshot.class::cast)
             .findFirst()
-            .orElseThrow();
-    assertEquals(8.0, gs.getDataPoints().getFirst().getValue(), 0.0);
+            .orElseThrow(() -> new AssertionError("Long gauge metric not found"));
+
+    assertEquals(5.0, actual.getDataPoints().getFirst().getValue(), 0.0);
   }
 
-//  @Test
-//  // NOCOMMIT FORCE FLUSH
-//  public void testObservableLongCounter() {
-//    SolrMetricManager metricManager = new SolrMetricManager();
-//    AtomicLong val = new AtomicLong();
-//
-//    metricManager.observableLongCounter(
-//            PROVIDER,
-//            "obs_long_counter",
-//            "desc",
-//            m -> m.record(val.get()),
-//            null
-//    );
-//    val.set(10);
-//
-//    MetricSnapshots snaps = scrape(mgr);
-//
-//    CounterSnapshot cs = snaps.stream()
-//            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_counter"))
-//            .map(CounterSnapshot.class::cast)
-//            .findFirst()
-//            .orElseThrow();
-//    assertEquals(10.0, cs.getDataPoints().get(0).getValue(), 0.0);
-//  }
-//
-//  @Test
-//  public void testObservableDoubleCounter() {
-//    SolrMetricManager mgr = new SolrMetricManager();
-//    AtomicReference<Double> val = new AtomicReference<>(0.0);
-//    mgr.observableDoubleCounter(
-//            PROVIDER,
-//            "obs_double_counter",
-//            "desc",
-//            m -> m.record(val.get()),
-//            null
-//    );
-//    val.set(15.5);
-//
-//    MetricSnapshots snaps = scrape(mgr);
-//    CounterSnapshot cs = snaps.stream()
-//            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_counter"))
-//            .map(CounterSnapshot.class::cast)
-//            .findFirst()
-//            .orElseThrow();
-//    assertEquals(15.5, cs.getDataPoints().get(0).getValue(), 1e-6);
-//  }
-//
-//  @Test
-//  public void testObservableLongGauge() {
-//    SolrMetricManager mgr = new SolrMetricManager();
-//    AtomicLong val = new AtomicLong();
-//    mgr.observableLongGauge(
-//            PROVIDER,
-//            "obs_long_gauge",
-//            "desc",
-//            m -> m.record(val.get()),
-//            null
-//    );
-//    val.set(20);
-//
-//    MetricSnapshots snaps = scrape(mgr);
-//    GaugeSnapshot gs = snaps.stream()
-//            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_gauge"))
-//            .map(GaugeSnapshot.class::cast)
-//            .findFirst()
-//            .orElseThrow();
-//    assertEquals(20.0, gs.getDataPoints().get(0).getValue(), 0.0);
-//  }
-//
-//  @Test
-//  public void testObservableLongUpDownCounter() {
-//    SolrMetricManager mgr = new SolrMetricManager();
-//    AtomicLong val = new AtomicLong();
-//    mgr.observableLongUpDownCounter(
-//            PROVIDER,
-//            "obs_long_updown",
-//            "desc",
-//            m -> m.record(val.get()),
-//            null
-//    );
-//    val.set(-5);
-//
-//    MetricSnapshots snaps = scrape(mgr);
-//    CounterSnapshot cs = snaps.stream()
-//            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_updown"))
-//            .map(CounterSnapshot.class::cast)
-//            .findFirst()
-//            .orElseThrow();
-//    assertEquals(-5.0, cs.getDataPoints().get(0).getValue(), 0.0);
-//  }
-//
-//  @Test
-//  public void testObservableDoubleUpDownCounter() {
-//    SolrMetricManager mgr = new SolrMetricManager();
-//    AtomicReference<Double> val = new AtomicReference<>(0.0);
-//    mgr.observableDoubleUpDownCounter(
-//            PROVIDER,
-//            "obs_double_updown",
-//            "desc",
-//            m -> m.record(val.get()),
-//            null
-//    );
-//    val.set(-3.3);
-//
-//    MetricSnapshots snaps = scrape(mgr);
-//    CounterSnapshot cs = snaps.stream()
-//            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_updown"))
-//            .map(CounterSnapshot.class::cast)
-//            .findFirst()
-//            .orElseThrow();
-//    assertEquals(-3.3, cs.getDataPoints().get(0).getValue(), 1e-6);
-//  }
+  @Test
+  public void testObservableLongCounter() {
+    SolrMetricManager metricManager = new SolrMetricManager();
+    LongAdder val = new LongAdder();
+    metricManager.observableLongCounter(
+        METER_PROVIDER_NAME, "obs_long_counter", "desc", m -> m.record(val.longValue()), null);
+    val.add(10);
+
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
+    MetricSnapshots metrics = reader.collect();
+
+    CounterSnapshot actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_counter"))
+            .map(CounterSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Long counter metric not found"));
+
+    assertEquals(10.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+
+    val.add(20);
+    metrics = reader.collect();
+    actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_counter"))
+            .map(CounterSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Long counter metric not found"));
+
+    // Observable metrics value changes anytime metricReader collects() to trigger callback
+    assertEquals(30.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+  }
+
+  @Test
+  public void testObservableDoubleCounter() {
+    SolrMetricManager metricManager = new SolrMetricManager();
+    DoubleAdder val = new DoubleAdder();
+    metricManager.observableDoubleCounter(
+        METER_PROVIDER_NAME, "obs_double_counter", "desc", m -> m.record(val.doubleValue()), null);
+    val.add(10.0);
+
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
+    MetricSnapshots metrics = reader.collect();
+
+    CounterSnapshot actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_counter"))
+            .map(CounterSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Double gauge metric not found"));
+
+    assertEquals(10.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+
+    val.add(0.1);
+    metrics = reader.collect();
+    actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_counter"))
+            .map(CounterSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Double gauge metric not found"));
+
+    // Observable metrics value changes anytime metricReader collects() to trigger callback
+    assertEquals(10.1, actual.getDataPoints().getFirst().getValue(), 1e-6);
+  }
+
+  @Test
+  public void testObservableLongGauge() {
+    SolrMetricManager metricManager = new SolrMetricManager();
+    AtomicLong val = new AtomicLong();
+    metricManager.observableLongGauge(
+        METER_PROVIDER_NAME, "obs_long_gauge", "desc", m -> m.record(val.get()), null);
+    val.set(10L);
+
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
+    MetricSnapshots metrics = reader.collect();
+
+    GaugeSnapshot actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Long gauge metric not found"));
+
+    assertEquals(10.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+
+    val.set(20L);
+    metrics = reader.collect();
+    actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Long gauge metric not found"));
+
+    // Observable metrics value changes anytime metricReader collects() to trigger callback
+    assertEquals(20.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+  }
+
+  @Test
+  public void testObservableDoubleGauge() {
+    SolrMetricManager metricManager = new SolrMetricManager();
+    AtomicDouble val = new AtomicDouble();
+    metricManager.observableDoubleGauge(
+        METER_PROVIDER_NAME, "obs_double_gauge", "desc", m -> m.record(val.get()), null);
+    val.set(10.0);
+
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
+    MetricSnapshots metrics = reader.collect();
+
+    GaugeSnapshot actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Double gauge metric not found"));
+
+    assertEquals(10.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+
+    val.set(10.1);
+    metrics = reader.collect();
+    actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Double gauge metric not found"));
+
+    // Observable metrics value changes anytime metricReader collects() to trigger callback
+    assertEquals(10.1, actual.getDataPoints().getFirst().getValue(), 0.0);
+  }
+
+  @Test
+  public void testObservableLongUpDownCounter() {
+    SolrMetricManager metricManager = new SolrMetricManager();
+    LongAdder val = new LongAdder();
+    metricManager.observableLongUpDownCounter(
+        METER_PROVIDER_NAME, "obs_long_updown_gauge", "desc", m -> m.record(val.longValue()), null);
+    val.add(10L);
+
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
+    MetricSnapshots metrics = reader.collect();
+
+    GaugeSnapshot actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_updown_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Long up down metric not found"));
+
+    assertEquals(10.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+
+    val.add(-20L);
+    metrics = reader.collect();
+    actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_long_updown_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Long up down metric not found"));
+
+    // Observable metrics value changes anytime metricReader collects() to trigger callback
+    assertEquals(-10.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+  }
+
+  @Test
+  public void testObservableDoubleUpDownCounter() {
+    SolrMetricManager metricManager = new SolrMetricManager();
+    DoubleAdder val = new DoubleAdder();
+    metricManager.observableDoubleUpDownCounter(
+        METER_PROVIDER_NAME,
+        "obs_double_updown_gauge",
+        "desc",
+        m -> m.record(val.doubleValue()),
+        null);
+    val.add(10.0);
+
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
+    MetricSnapshots metrics = reader.collect();
+
+    GaugeSnapshot actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_updown_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Double up down gauge metric not found"));
+
+    assertEquals(10.0, actual.getDataPoints().getFirst().getValue(), 0.0);
+
+    val.add(-20.1);
+    metrics = reader.collect();
+    actual =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("obs_double_updown_gauge"))
+            .map(GaugeSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("Double up down gauge metric not found"));
+
+    // Observable metrics value changes anytime metricReader collects() to trigger callback
+    assertEquals(-10.1, actual.getDataPoints().getFirst().getValue(), 1e-6);
+  }
+
+  @Test
+  public void testCloseMeterProviders() {
+    SolrMetricManager metricManager = new SolrMetricManager();
+    LongCounter counter =
+        metricManager.longCounter(METER_PROVIDER_NAME, "my_counter", "desc", null);
+    counter.add(5);
+
+    PrometheusMetricReader reader = metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME);
+    MetricSnapshots metrics = reader.collect();
+    CounterSnapshot data =
+        metrics.stream()
+            .filter(m -> m.getMetadata().getPrometheusName().equals("my_counter"))
+            .map(CounterSnapshot.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new AssertionError("LongCounter metric not found"));
+    assertEquals(5, data.getDataPoints().getFirst().getValue(), 0.0);
+
+    metricManager.closeMeterProvider(METER_PROVIDER_NAME);
+
+    assertNull(metricManager.getPrometheusMetricReader(METER_PROVIDER_NAME));
+  }
 }
